[package]
name = "swarm_worker_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["stream", "json"] }
flate2 = "1.0"
zstd = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
bytes = "1.4"
futures-util = "0.3"
